2001-10-02  Sven Neumann  <sven@gimp.org>

	* gdk-pixdata.c: g_string_printfa => g_string_append_printf. 

Wed Sep 26 18:08:19 2001  Owen Taylor  <otaylor@redhat.com>

	* Makefile.am (s-enum-types-h): Fix a typo in the include
	guards. (#61254, Skip Montaro)

2001-09-21  Matthias Clasen  <matthiasc@poet.de>

	* io-xpm.c (xpm_extract_color): Rewritten to handle
	xpm colormap entries more thoroughly. (#59939)

2001-09-21  Hans Breuer  <hans@breuer.org>

	* gdk-pixbuf.def : updated externals

	* makefile.msc : generate gdk-pixbuf-enum-types.[hc]

Thu Sep 20 17:22:48 2001  Owen Taylor  <otaylor@redhat.com>

	* io-tiff.c (gdk_pixbuf__tiff_image_load): On OSF, apparently fseek()
	works in some on-demand way, so the fseek gdk_pixbuf_new_from_file() doesn't 
	work here since we are using the raw file descriptor. So, we call lseek()
	on the fileno(f) before using it. (#60840).

2001-09-20  James Henstridge  <james@daa.com.au>

	* Makefile.am (gdk-pixbuf-enum-types.c): same change as in pango,
	so that flags types are registered as flags rather than enums (not
	that there are any flags here at the moment).

Wed Sep 19 00:28:24 2001  Owen Taylor  <otaylor@redhat.com>

	* Makefile.am (gdk_pixbuf_headers): Don't include
	gkd-pixbuf-features.h here since is in builddir
	and confuses autogen rules.

	* Makefile.am: Don't += variables before they have values,
	automake-1.5 doesn't like it.

	* Makefile.am: Fix srcdir != builddir for gdk-pixbuf-enum-types.c.

	* Makefile.am: The whitespace strikes back.
	
2001-09-17  Matt Wilson  <msw@redhat.com>

	* Makefile.am (libpixbufloader_xbm_la_LDFLAGS): removed duplicate
	LDFLAGS definition, use the -avoid-version one.
	(libpixbufloader_tga_la_LDFLAGS): likewise

Mon Sep 17 11:49:02 2001  Owen Taylor  <otaylor@redhat.com>

	* pixops/*: Mirror GdkInterpType to PixopsInterpType
	to avoid including gdk-pixbuf headers.

2001-09-16  James Henstridge  <james@daa.com.au>

	* .cvsignore: add generated files to ignore list.
